Finish ads list 2 and 3

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -62,7 +62,8 @@ $font-h: 'Roboto', sans-serif;
 	display: flex;
 	justify-content: space-around;
 	flex: 3;
-	font-size: 14px;
+	font-size: 12px;
+	margin-top: 5px;
 }
 
 .nav-3 {
