Fix font-size on nav-2

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -51,7 +51,6 @@ $font-h: 'Roboto', sans-serif;
   align-items: center;
   flex: 1;
   font-size: 13px;
-
   h2 {
     font-size: 13px;
     margin-top: 5px;
@@ -62,6 +61,7 @@ $font-h: 'Roboto', sans-serif;
   display: flex;
   justify-content: space-around;
   flex: 3;
+	font-size: 12px;
   margin-top: 5px;
 }
 
