Finish header form and title for all viewports

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -33,11 +33,11 @@ $font-h: 'Roboto', sans-serif;
 }
 
 .bg-black {
-  background-color: black;
+  background-color: $black;
 }
 
 .color-black {
-  color: black;
+  color: $black;
 }
 
 .nav {
