Finish search item model

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -175,11 +175,33 @@ footer {
 	.search-div {
 		padding-left: 80px;
 	}
+
+	.flex {
+		display: flex;
+	}
+
+	.search-img {
+		width: 250px;
+		height: 20%;
+		flex: 1;
+	}
+	
+	.search-txt-div {
+		flex: 3;
+		font-size: 10px;
+	}
+	
 }
 
 @media (min-width: 1024px) {
 	.search-div {
 		padding-left: 220px;
+	}
+
+	.search-img {
+		width: 320px;
+		height: 100%;
+		flex: 1;
 	}
 }
 
