Change img path to url

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -172,7 +172,7 @@ footer {
 }
 
 .results-img {
-  background: url(../../Assets/imgs/amongus.jpg) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
   background-size: cover;
   background-position: center;
   height: 200px;
