--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -117,7 +117,7 @@ $font-h: 'Roboto', sans-serif;
 }
 
 .hot-ads-img {
-  background-image: url(https://cdn.akamai.steamstatic.com/steam/apps/814380/header.jpg?t=1603904569) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/814380/header.jpg?t=1603904569) no-repeat;
   background-size: cover;
   background-position: center;
 }
