--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -242,7 +242,7 @@ footer {
   }
 
   .hot-ads-img {
-    background-image: url(../../Assets/imgs/sekiro.jpg);
+    background: url(https://cdn.akamai.steamstatic.com/steam/apps/814380/header.jpg?t=1603904569) no-repeat;
     background-size: cover;
     background-position: center;
     height: 500px;
