--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -180,41 +180,52 @@ footer {
 }
 
 .results-img-3 {
-  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/239140/header_alt_assets_31.jpg?t=1615288599) no-repeat;
 }
 
 .results-img-4 {
-  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/1250410/header.jpg?t=1612391267) no-repeat;
 }
 
 .results-img-5 {
-  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/271590/header.jpg?t=1592866696) no-repeat;
 }
 
 .results-img-6 {
-  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/1145360/header.jpg?t=1613153824) no-repeat;
 }
 
 .results-img-7 {
-  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/1282730/header.jpg?t=1615042098) no-repeat;
 }
 
 .results-img-8 {
-  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/582010/header.jpg?t=1613693233) no-repeat;
 }
 
 .results-img-9 {
-  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/413150/header.jpg?t=1608624324) no-repeat;
 }
 
 .results-img-0 {
-  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
+  background: url(https://cdn.akamai.steamstatic.com/steam/apps/105600/header.jpg?t=1590092560) no-repeat;
 }
 
 .results-img,
-.results-img-1 {
+.results-img-1,
+.results-img-2,
+.results-img-3,
+.results-img-4,
+.results-img-5,
+.results-img-6,
+.results-img-7,
+.results-img-8,
+.results-img-9,
+.results-img-0 {
   background-size: cover;
   background-position: center;
+  width: 310px;
+  height: 200px;
 }
 
 @media (min-width: 768px) {
@@ -256,11 +267,6 @@ footer {
     font-size: 10px;
   }
 
-  .results-img {
-    height: 200px;
-    width: 250px;
-  }
-
   .result-txt {
     font-size: 13px;
   }
@@ -268,6 +274,23 @@ footer {
   .form-txt {
     font-size: 22px;
   }
+
+  .results-img,
+  .results-img-1,
+  .results-img-2,
+  .results-img-3,
+  .results-img-4,
+  .results-img-5,
+  .results-img-6,
+  .results-img-7,
+  .results-img-8,
+  .results-img-9,
+  .results-img-0 {
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+  width: 200px;
+}
 }
 
 @media (min-width: 1024px) {
@@ -295,6 +318,23 @@ footer {
   .result-txt {
     font-size: 16px;
   }
+
+  .results-img,
+  .results-img-1,
+  .results-img-2,
+  .results-img-3,
+  .results-img-4,
+  .results-img-5,
+  .results-img-6,
+  .results-img-7,
+  .results-img-8,
+  .results-img-9,
+  .results-img-0 {
+  background-size: cover;
+  background-position: center;
+  width: 450px;
+  height: 240px;
+}
 }
 
 @media (min-width: 1440px) {
