--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -69,6 +69,14 @@ $font-h: 'Roboto', sans-serif;
 .nav-3 {
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.nav-4 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   flex: 1;
 }
 
