--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -4,6 +4,10 @@ $black: #383838;
 $font-g: 'Montserrat', sans-serif;
 $font-h: 'Roboto', sans-serif;
 
+html {
+ overflow-x: hidden;
+}
+
 .font-1 {
   font-family: $font-g;
 }
